added content to background messaging

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
     "activeTab",
     "tabs"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "index.html"
   },
