--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "index.html"
+    "default_popup": "popup.html"
   },
   "content_scripts": [
     {
