--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0",
+  "version": "1.2.1",
   "manifest_version": 3,
   "name": "Bing Rewards",
   "host_permissions": ["*://*/*"],
@@ -23,9 +23,9 @@
   },
   "content_scripts": [
     {
+      "run_at": "document_end",
       "all_frames": true,
-      "matches": ["https://www.bing.com/*", "https://bing.com/*"],
-      "run_at": "document_start",
+      "matches": ["https://www.bing.com/search?*"],
       "js": ["content.js"]
     }
   ]
