--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "version": "1.2.1",
   "manifest_version": 3,
-  "name": "Bing Rewards",
+  "name": "Microsoft Rewards",
   "host_permissions": ["*://*/*"],
-  "description": "Bing Rewards auto search extension",
+  "description": "Microsoft Rewards auto search extension",
   "permissions": [
     "scripting",
     "contextMenus",
