--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bing-extension",
+  "name": "microsoft-rewards-extension",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
